new endpoint for russian categories
